--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "erela.js-apple": "^1.2.5",
     "erela.js-deezer": "^1.0.7",
     "erela.js-facebook": "^1.0.4",
+    "express": "^4.17.2",
     "lavasfy": "^2.3.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
@@ -46,6 +47,7 @@
     "ms": "^2.1.3",
     "node-superfetch": "^0.2.3",
     "pretty-ms": "^7.0.1",
-    "systeminformation": "^5.9.13"
+    "systeminformation": "^5.9.13",
+    "web": "0.0.2"
   }
 }
